--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "author": "Brent Jackson <jxnblk@gmail.com>",
   "license": "0BSD",
   "dependencies": {
+    "aos": "^2.3.4",
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.0.2",
+    "gatsby-plugin-sass": "^5.1.0",
     "node-fetch": "^2.6.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^2.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.43.4"
   }
 }
