--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A Gatsby starter to demonstrate new rendering modes in Gatsby 4",
   "main": "index.js",
   "scripts": {
-    "start": "gatsby develop",
+    "start": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-page-scroller": "^2.2.1",
     "sass": "^1.43.4"
   }
 }
